force-app/main/default/objects/Attempt_Tracking__c/Attempt_Tracking__c.object-meta.xml
<CustomObject>
    <label>Attempt Tracking</label>
    <nameField>
        <label>Attempt Tracking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attempt Trackings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>