force-app/main/default/objects/Attempt_Tracking__c/fields/Attempt_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Attempt_Sequence__c</fullName>
    <label>Attempt Sequence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>