force-app/main/default/objects/Attempt_Tracking__c/fields/Attempted_By__c.field-meta.xml
<CustomField>
    <fullName>Attempted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attempt Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Attempt_Trackings</relationshipName>
    <type>Lookup</type>
</CustomField>