force-app/main/default/objects/Attempt_Tracking__c/fields/Day_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Day_Tracking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Day Tracking</label>
    <referenceTo>Day_Tracking__c</referenceTo>
    <relationshipLabel>Attempt Trackings</relationshipLabel>
    <relationshipName>Attempt_Trackings</relationshipName>
    <type>Lookup</type>
</CustomField>