force-app/main/default/objects/Attempt_Tracking__c/fields/Last_Attempt_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Attempt_Status__c</fullName>
    <formula>TEXT( Day_Tracking__r.Lead__r.Last_Attempt_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Attempt Status</label>
    <type>Text</type>
</CustomField>