force-app/main/default/objects/Attempt_Tracking__c/fields/Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_Id__c</fullName>
    <formula>Day_Tracking__r.Lead__r.Lead_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Id</label>
    <type>Text</type>
</CustomField>