force-app/main/default/objects/Attempt_Tracking__c/fields/Lead_Link__c.field-meta.xml
<CustomField>
    <fullName>Lead_Link__c</fullName>
    <formula>&quot;https://sobharealty.lightning.force.com/lightning/r/Lead/&quot;+ Day_Tracking__r.Lead__r.Id + &quot;/view&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Link</label>
    <type>Text</type>
</CustomField>