force-app/main/default/objects/Attempt_Tracking__c/recordTypes/Official_Landline.recordType-meta.xml
<RecordType>
    <fullName>Official_Landline</fullName>
    <active>true</active>
    <label>Official Landline</label>
</RecordType>