force-app/main/default/objects/Attempt_Tracking__c/recordTypes/Official_Mobile.recordType-meta.xml
<RecordType>
    <fullName>Official_Mobile</fullName>
    <active>true</active>
    <label>Official Mobile</label>
</RecordType>