force-app/main/default/objects/Attempt_Tracking__c/recordTypes/Sobha_Landline.recordType-meta.xml
<RecordType>
    <fullName>Sobha_Landline</fullName>
    <active>true</active>
    <label>Sobha Landline</label>
</RecordType>