force-app/main/default/objects/Attempt_Tracking__c/recordTypes/WhatsApp.recordType-meta.xml
<RecordType>
    <fullName>WhatsApp</fullName>
    <active>true</active>
    <label>WhatsApp</label>
</RecordType>